<resources>
    <string name="app_name">Unit Converter</string>
    <string name="title">Temperature\nConverter</string>
    <string name="celcius">C</string>
    <string name="fahrenheit">F</string>
    <string name="swap">Swap</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="clear">c</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="plus">+</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="convert">OK</string>
</resources>